<resources>
    <string name="app_name">todoboom</string>
    <string name="new_string">type here</string>
    <string name="Button_text">create</string>
    <string name="todo">task todo</string>
    <string name="remove">Remove conformation</string>
    <string name="assurance">Are you sure you want to delete this?</string>
    <string name="editTodo">edit task</string>
    <string name="saveButton">apply changes</string>
    <string name="doneButton">Done</string>
    <string name="undoneButton">UN Mark</string>
    <string name="deleteButton">Delete</string>
    <string name="completedTodo">Completed Task</string>
    <string name="nonCompletedTodo">Uncompleted Todo Task</string>
</resources>